[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insar-sci"
version = "0.1.0"
description = "Python tools for GeoTIFF-based InSAR post-processing and candidate SSE diagnostics."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
